# op3_test

./: README.md
day_04_12_2023/no1_ROBOTIS-OP3-master/.catkin_tools/profiles/default/: devel_collisions.txt
day_04_12_2023/no1_ROBOTIS-OP3-master/src/op3_manager/launch/: op3_gazebo.launch
day_04_12_2023/no2_OBOTIS-OP3-Common-master/.catkin_tools/profiles/default/: devel_collisions.txt
day_04_12_2023/no2_OBOTIS-OP3-Common-master/devel/: .catkin  .rosinstall  setup.sh
day_04_12_2023/no2_OBOTIS-OP3-Common-master/devel/lib/pkgconfig/: op3_description.pc  op3_gazebo.pc
day_04_12_2023/no2_OBOTIS-OP3-Common-master/devel/share/op3_description/cmake/: op3_descriptionConfig.cmake
day_04_12_2023/no2_OBOTIS-OP3-Common-master/devel/share/op3_gazebo/cmake/: op3_gazeboConfig.cmake
day_04_12_2023/no2_OBOTIS-OP3-Common-master/src/op3_description/: package.xml
day_04_12_2023/no2_OBOTIS-OP3-Common-master/src/op3_description/launch/: op3_display.launch
day_04_12_2023/no2_OBOTIS-OP3-Common-master/src/op3_description/rviz/: op.rviz
day_04_12_2023/no2_OBOTIS-OP3-Common-master/src/op3_description/urdf/: robotis_op3.gazebo.xacro  robotis_op3.inertia.xacro  robotis_op3.urdf.xacro
day_04_12_2023/no2_OBOTIS-OP3-Common-master/src/op3_gazebo/config/: position_controller.yaml
day_04_12_2023/no2_OBOTIS-OP3-Common-master/src/op3_gazebo/launch/: position_controller.launch  robotis_world.launch
day_04_12_2023/no3_ROBOTIS-OP3-Tools-master/.catkin_tools/profiles/default/: devel_collisions.txt
day_04_12_2023/no3_ROBOTIS-OP3-Tools-master/src/footstep_planner/: CMakeLists.txt
day_04_12_2023/no3_ROBOTIS-OP3-Tools-master/src/gridmap_2d/: CMakeLists.txt
day_04_12_2023/no3_ROBOTIS-OP3-Tools-master/src/gridmap_2d/include/gridmap_2d/: GridMap2D.h
day_04_12_2023/no3_ROBOTIS-OP3-Tools-master/src/op3_gui_demo/: CMakeLists.txt  package.xml
day_04_12_2023/no3_ROBOTIS-OP3-Tools-master/src/op3_gui_demo/launch/: op3_demo.launch
day_04_12_2023/no3_ROBOTIS-OP3-Tools-master/src/op3_web_setting_tool/html/: index.html
day_04_12_2023/no4_ROBOTIS-OP3-Demo-master/src/op3_bringup/: package.xml
day_04_12_2023/no4_ROBOTIS-OP3-Demo-master/src/op3_bringup/launch/: op3_bringup_visualization.launch
day_04_12_2023/no4_ROBOTIS-OP3-Demo-master/src/op3_description/: package.xml
day_04_12_2023/no4_ROBOTIS-OP3-Demo-master/src/op3_description/urdf/: robotis_op3.urdf.xacro
op3_test1/no1_ROBOTIS-OP3/src/op3_manager/config/: offset.yaml
op3_test1/no2_ROBOTIS-OP3-Common/devel/: .catkin
op3_test1/no2_ROBOTIS-OP3-Common/devel/lib/pkgconfig/: op3_description.pc  op3_gazebo.pc
op3_test1/no2_ROBOTIS-OP3-Common/devel/share/op3_description/cmake/: op3_descriptionConfig.cmake
op3_test1/no2_ROBOTIS-OP3-Common/devel/share/op3_gazebo/cmake/: op3_gazeboConfig.cmake
op3_test1/no2_ROBOTIS-OP3-Common/src/op3_description/launch/: op3_display.launch  op3_rviz.launch  op3_walking.launch
op3_test1/no2_ROBOTIS-OP3-Common/src/op3_description/rviz/: op3_walking.rviz
op3_test1/no2_ROBOTIS-OP3-Common/src/op3_description/urdf/: robotis_op3.inertia.xacro
op3_test1/no3_ROBOTIS-OP3-Tools/src/op3_gui_demo/: package.xml
op3_test1/no3_ROBOTIS-OP3-Tools/src/op3_tuner_client/src/: main_window.cpp
op3_test1/no4_ROBOTIS-OP3-Demo/src/op3_ball_detector/config/: ball_detector_params.yaml
